--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,19 @@
 
 /* Global */
 :root {
-  --color-bg: #ffffff;
   --color-text: #22243b;
   --color-accent: #fc1e47;
-  --color-scrollbar: #aaa7a7;
-  --color-white: white;
+  --color-bg: #fbfbfb;
+  --color-white: #ffffff;
+  --color-grey: #aaa7a7;
+  --color-white-grey: #f3f3f3;
+  --color-dark-grey: #5e5e5e;
 }
 
 /* Universal tags*/
 * {
   box-sizing: border-box;
 }
-
 
 body {
   margin: 0;
@@ -28,7 +29,31 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #ffeeee; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #ddefbb,
+    #ffeeee
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #ddefbb,
+    #ffeeee
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   font-size: 1.2rem;
+}
+
+#root {
+  width: 100%;
+  height: 60%;
+  max-width: 500px;
+  background-color: var(--color-bg);
+  overflow: hidden;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
 }
 
 a {
