--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
 /* reset css */
 @import "./css/reset.css";
 
+/* fonts */
+@font-face {
+  font-family: "Pretendard Variable";
+  font-weight: 45 920;
+  font-style: normal;
+  font-display: swap;
+  src: local("Pretendard Variable"),
+    url("./fonts/PretendardVariable.woff2") format("woff2-variations");
+}
+
 /* Global */
 :root {
   --color-text: #22243b;
   --color-accent: #fc1e47;
+  --color-green: #d3ef9e;
+  --color-pink: #ffeeee;
   --color-bg: #fbfbfb;
   --color-white: #ffffff;
-  --color-grey: #aaa7a7;
+  --color-grey: #9ea2a5;
   --color-white-grey: #f3f3f3;
   --color-dark-grey: #5e5e5e;
 }
@@ -19,9 +31,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Pretendard Variable", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
@@ -54,6 +64,13 @@ body {
   flex-direction: column;
   -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 a {
