--- a/src/components/auth/logInCard/LoginCard.module.css
+++ b/src/components/auth/logInCard/LoginCard.module.css
@@ -17,6 +17,13 @@
   color: var(--color-text);
 }
 
+.wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .input {
   display: flex;
   width: 70%;
@@ -25,6 +32,26 @@
   border-color: var(--color-white-grey);
   border-radius: 10px;
   margin: 4px 0;
+  outline: none;
+}
+
+.input:focus-within {
+  border: 2px solid var(--color-check);
+}
+
+.null {
+  display: none;
+}
+
+.errorMessage {
+  width: 70%;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 8px;
+  padding: 4px 10px;
+  color: var(--color-error);
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .button {
@@ -33,19 +60,20 @@
   align-items: center;
   width: 70%;
   border-radius: 10px;
-  background-color: var(--color-accent);
-  color: var(--color-white);
   padding: 10px;
   margin: 4px 0;
+  background-color: var(--color-check);
+  color: var(--color-white);
   font-weight: 600;
 }
 
 .button:hover {
-  filter: brightness(1.3);
+  filter: brightness(1.05);
 }
 
 .desc {
   display: flex;
+  color: var(--color-white-grey);
 }
 
 .sub {
