--- a/src/components/todo/todoHeader/TodoHeader.module.css
+++ b/src/components/todo/todoHeader/TodoHeader.module.css
@@ -26,10 +26,10 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-.toggle:hover {
-  color: var(--color-accent);
+  color: #ffc5c5;
+  font-weight: 600;
+  border-radius: 8px;
+  padding: 4px;
 }
 
 .icon {
