--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,15 @@
 
 /* Global */
 :root {
-  --color-text: #22243b;
-  --color-accent: #fc1e47;
-  --color-green: #d3ef9e;
-  --color-pink: #ffeeee;
   --color-bg: #fbfbfb;
+  --color-accent: #fc1e47;
+  --color-text: #22243b;
   --color-white: #ffffff;
   --color-grey: #9ea2a5;
   --color-white-grey: #f3f3f3;
   --color-dark-grey: #5e5e5e;
+  --color-check: #d3ef9e;
+  --color-error: #ff6b6b;
 }
 
 /* Universal tags*/
