Feat: add style- scrollbar color

--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--color-bg);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-grey);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent);
+}
